--- a/2.html
+++ b/2.html
@@ -28,6 +28,12 @@
     font-weight: normal;
     font-style: normal;
     }
+    @font-face {
+    font-family: 'SUIT-Medium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    }
   </style>
 </head>
 <body>
@@ -38,32 +44,32 @@
   <p>
     <img src="여치.jpg" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2016.8.15 서산 <strong>여치</strong></span>
+    <span style="font-size:30px;">2016.8.15 충남 서산 <strong>여치</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="벼메뚜기.JPG" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2019.10.7 청태산 <strong>벼메뚜기</strong></span>
+    <span style="font-size:30px;">2019.10.7 강원 횡성 청태산 <strong>벼메뚜기</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="밑들이메뚜기.JPG" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2019.10.7 청태산 <strong>밑들이메뚜기</strong></span>
+    <span style="font-size:30px;">2019.10.7 강원 횡성 청태산 <strong>밑들이메뚜기</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="애매부리.JPG" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2019.10.7 청태산 <strong>애매부리</strong></span>
+    <span style="font-size:30px;">2019.10.7 강원 횡성 청태산 <strong>애매부리</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="모메뚜기 (1).jpg" Width="100%">
     <img src="모메뚜기 (2).jpg" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2020.7.25 하남 미사 <strong>모메뚜기</strong></span>
+    <span style="font-size:30px;">2020.7.25 경기 하남 미사 <strong>모메뚜기</strong></span>
     <br><br>
     <span style="font-size:30px;">2021.8.28</span>
   </p>
@@ -71,25 +77,25 @@
   <p>
     <img src="방아깨비.jpg" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2021.8.7 하남 미사 <strong>방아깨비</strong></span>
+    <span style="font-size:30px;">2021.8.7 경기 하남 미사 <strong>방아깨비</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="섬서구메뚜기.jpg" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2021.8.28 하남 미사 <strong>섬서구메뚜기</strong></span>
+    <span style="font-size:30px;">2021.8.28 경기 하남 미사 <strong>섬서구메뚜기</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="줄베짱이.jpg" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2021.9.19 서산 가재골 <strong>줄베짱이</strong></span>
+    <span style="font-size:30px;">2021.9.19 충남 서산 가재골 <strong>줄베짱이</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="날베짱이.JPG" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2021.10.11 가평 용소계곡 <strong>날베짱이</strong></span>
+    <span style="font-size:30px;">2021.10.11 경기 가평 용소계곡 <strong>날베짱이</strong></span>
   </p>
 </body>
 </html>
