--- a/4.html
+++ b/4.html
@@ -28,6 +28,12 @@
     font-weight: normal;
     font-style: normal;
     }
+    @font-face {
+    font-family: 'SUIT-Medium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    }
   </style>
 </head>
 <body>
@@ -56,44 +62,50 @@
     <img src="매미 탈피.JPG" Width="100%">
     <img src="참매미.jpg" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2015.10.9 광명 철산 <strong>참매미 유충</strong></span>
+    <span style="font-size:30px;">2015.10.9 경기 광명 철산 <strong>참매미 유충</strong></span>
     <br><br>
-    <span style="font-size:30px;">2016.7.17 광명 철산 <strong>우화 직후</strong></span>
+    <span style="font-size:30px;">2016.7.17 경기 광명 철산 <strong>우화 직후</strong></span>
     <br><br>
-    <span style="font-size:30px;">2019.8.5 칠현산 <strong>허물</strong></span>
+    <span style="font-size:30px;">2019.8.5 경기 안성 칠현산 <strong>허물</strong></span>
     <br><br>
-    <span style="font-size:30px;">2019.8.5 하남 미사 <strong>참매미</strong></span>
+    <span style="font-size:30px;">2019.8.5 경기 하남 미사 <strong>참매미</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="노랑배허리노린재.jpg" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2019.11.12 하남 미사 <strong>노랑배허리노린재</strong></span>
+    <span style="font-size:30px;">2019.10.9 강원 횡성 청태산 <strong>북방풀노린재</strong></span>
+  </p>
+  <br><br><br><br><br>
+  <p>
+    <img src="노랑배허리노린재.jpg" Width="100%">
+    <br><br><br>
+    <span style="font-size:30px;">2019.11.12 경기 하남 미사 <strong>노랑배허리노린재</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="털매미.jpg" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2020.7.26 하남 미사 <strong>털매미</strong></span>
+    <span style="font-size:30px;">2020.7.26 경기 하남 미사 <strong>털매미</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="방패광대노린재.jpg" Width="100%">
     <img src="방패광대노린재 (2).jpg" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2021.8.14 성산일출봉 <strong>방패광대노린재</strong></span>
+    <span style="font-size:30px;">2021.8.14 제주 서귀포 성산일출봉 <strong>방패광대노린재</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="톱다리개미허리노린재.JPG" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2021.10.11 가평 용소계곡 <strong>톱다리개미허리노린재</strong></span>
+    <span style="font-size:30px;">2021.10.11 경기 가평 용소계곡 <strong>톱다리개미허리노린재</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
-    <img src="느티나무노린재.jpg" Width="100%">
+    <img src="썩덩나무노린재.jpg" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2021.10.27 하남 미사 <strong>느티나무노린재</strong></span>
+    <span style="font-size:30px;">2021.10.27 경기 하남 미사 <strong>썩덩나무노린재</strong></span>
   </p>
 </body>
 </html>
