--- a/1.html
+++ b/1.html
@@ -17,14 +17,20 @@
       padding-bottom:15px;
     }
     body {
+      font-family: 'Noto Sans KR', sans-serif;
       margin:60px;
-      font-family: 'ChosunSm';
     }
   </style>
   <style type="text/css">
     @font-face {
     font-family: 'ChosunSm';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.1/ChosunSm.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    }
+    @font-face {
+    font-family: 'SUIT-Medium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
     }
@@ -39,63 +45,63 @@
     <img src="청띠신선나비 (1).jpg" Width="100%">
     <img src="청띠신선나비 (2).jpg" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2017.4.13 일자산 <strong>청띠신선나비</strong></span>
+    <span style="font-size:30px;">2017.4.13 서울 강동 일자산 <strong>청띠신선나비</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="흰무늬왕불나방.JPG" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2017.8.15 치악산 <strong>흰무늬왕불나방</strong></span>
+    <span style="font-size:30px;">2017.8.15 강원 원주 치악산 <strong>흰무늬왕불나방</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="암끝검은표범나비.JPG" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2017.10.7 다랭이마을 <strong>암끝검은표범나비</strong></span>
+    <span style="font-size:30px;">2017.10.7 경남 남해 다랭이마을 <strong>암끝검은표범나비</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="줄점팔랑나비.JPG" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2017.10.7 다랭이마을 <strong>줄점팔랑나비</strong></span>
+    <span style="font-size:30px;">2017.10.7 경남 남해 다랭이마을 <strong>줄점팔랑나비</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="애기세줄나비.JPG" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2018.8.5 칠현산 <strong>애기세줄나비</strong></span>
+    <span style="font-size:30px;">2018.8.5 경기 안성 칠현산 <strong>애기세줄나비</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="왕물결나방(1).JPG" Width="100%">
     <img src="왕물결나방(2).JPG" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2018.8.6,8 칠현산 <strong>왕물결나방</strong></span>
+    <span style="font-size:30px;">2018.8.6,8 경기 안성 칠현산 <strong>왕물결나방</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="산누에나방 종류.JPG" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2018.9.12 태백산 <strong>산누에나방 종류 (미동정)</strong></span>
+    <span style="font-size:30px;">2018.9.12 강원 태백 태백산 <strong>산누에나방 종류 (미동정)</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="산제비나비.JPG" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2019.6.6 남양주 수동면 <strong>산제비나비</strong></span>
+    <span style="font-size:30px;">2019.6.6 경기 남양주 수동면 <strong>산제비나비</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="왕세줄나비.JPG" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2019.6.6 남양주 수동면 <strong>왕세줄나비</strong></span>
+    <span style="font-size:30px;">2019.6.6 경기 남양주 수동면 <strong>왕세줄나비</strong></span>
   </p>
   <br><br><br><br><br>
   <p>
     <img src="네발나비 (1).jpg" Width="100%">
     <img src="네발나비 (2).jpg" Width="100%">
     <br><br><br>
-    <span style="font-size:30px;">2021.8.28 하남 미사 <strong>네발나비</strong></span>
+    <span style="font-size:30px;">2021.8.28 경기 하남 신장 <strong>네발나비</strong></span>
   </p>
 </body>
 </html>
