--- a/3.html
+++ b/3.html
@@ -28,6 +28,12 @@
    font-weight: normal;
    font-style: normal;
    }
+   @font-face {
+    font-family: 'SUIT-Medium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+   }
  </style>
 </head>
 <body>
