--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 <!doctype html>
 <html>
 <head>
-  <title>Field Guide to Insects of South Korea</title>
+  <title>Insects of South Korea</title>
   <meta charset="utf-8">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
   <style>
-    a {
-      color:black;
-    }
-    a {
+   a {
+      color:white;
       text-decoration: none;
     }
     h1 {
-      font-family: 'Playfair Display', serif;
-      font-size:150px;
-      text-align: center;
-      border-bottom:3px solid black;
+      font-family: 'Noto Sans KR', sans-serif;
+      font-size:220px;
+      font-weight:900;
+      text-align: left;
       margin:0;
-     }
+      padding-top:140px;
+      padding-left:120px;
+      padding-bottom:2000px;
+      line-height:220px;
+      }
     body {
+      background-image: url("제목 없음1234.png");
+      background-size: cover;
       margin:60px;
     }
     ul {
+      color:black;
+      padding-left:670px;
+      list-style:none;
       margin:25px;
       font-size:43px;
     }
@@ -35,16 +43,28 @@
     font-weight: normal;
     font-style: normal;
     }
+    @font-face {
+    font-family: 'SUIT-Medium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    }
+    @font-face {
+    font-family: 'SUIT-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    }
   </style>
 </head>
 <body>
-  <h1><a href="index.html">Insects in<br>South Korea</a></h1>
+  <h1 style="color:white;"><a href="index.html">INSECTS<br>IN<br>KOREA</a></h1>
   <br><br><br><br>
   <ul>
-    <li><a href="1.html"><p style="font-family: 'ChosunSm';"><span style="font-size:100px;">나비목</span></p></a></li>
-    <li><a href="2.html"><p style="font-family: 'ChosunSm';"><span style="font-size:100px;">메뚜기목</span></p></a></li>
-    <li><a href="3.html"><p style="font-family: 'ChosunSm';"><span style="font-size:100px;">딱정벌레목</span></p></a></li>
-    <li><a href="4.html"><p style="font-family: 'ChosunSm';"><span style="font-size:100px;">노린재목</span></p></a></li>
+    <li><a href="1.html"><p style="font-family: 'SUIT-Medium';"><span style="font-size:100px;">나비목</span></p></a></li>
+    <li><a href="2.html"><p style="font-family: 'SUIT-Medium';"><span style="font-size:100px;">메뚜기목</span></p></a></li>
+    <li><a href="3.html"><p style="font-family: 'SUIT-Medium';"><span style="font-size:100px;">딱정벌레목</span></p></a></li>
+    <li><a href="4.html"><p style="font-family: 'SUIT-Medium';"><span style="font-size:100px;">노린재목</span></p></a></li>
   </ul>
 </body>
 </html>
