--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
     }
     h1 {
       font-family: 'Noto Sans KR', sans-serif;
-      font-size:220px;
+      font-size:14vw;
       font-weight:900;
       text-align: left;
       margin:0;
       padding-top:140px;
       padding-left:120px;
       padding-bottom:2000px;
-      line-height:220px;
+      line-height:215px;
       }
     body {
+      height: 100vh;
+      width: 100vw;
       background-image: url("제목 없음1234.png");
       background-size: cover;
       margin:60px;
@@ -33,7 +35,7 @@
       padding-left:670px;
       list-style:none;
       margin:25px;
-      font-size:43px;
+      font-size:2vw;
     }
   </style>
   <style type="text/css">
