--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
       font-weight:900;
       text-align: left;
       margin:0;
-      padding-top:140px;
-      padding-left:120px;
-      padding-bottom:2000px;
-      line-height:215px;
+      padding-top:4vw;
+      padding-left:5vw;
+      padding-bottom:134vw;
+      line-height:14vw;
       }
     body {
       height: 100vh;
       width: 100vw;
       background-image: url("제목 없음1234.png");
       background-size: cover;
+      background-repeat: no-repeat;
       margin:60px;
     }
     ul {
