--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       background-image: url("제목 없음1234.png");
       background-size: cover;
       background-repeat: no-repeat;
-      margin:60px;
+      margin:6vw;
     }
     ul {
       color:black;
-      padding-left:670px;
+      padding-left:37vw;
       list-style:none;
       margin:25px;
       font-size:2vw;
