--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta charset="utf-8">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
   <style>
-   a {
+    a {
       color:white;
       text-decoration: none;
     }
@@ -18,19 +17,20 @@
       font-weight:900;
       text-align: left;
       margin:0;
-      padding-top:4vw;
-      padding-left:5vw;
+      padding-top:6vw;
+      padding-left:7vw;
       padding-bottom:134vw;
       line-height:14vw;
       }
     body {
-      height: 100vh;
-      width: 100vw;
+      margin: 0px;
+      padding: 0px;
+      height: 96vh;
+      width: 96vw;
       background-image: url("제목 없음1234.png");
       background-size: cover;
       background-repeat: no-repeat;
-      margin:6vw;
-    }
+      }
     ul {
       color:black;
       padding-left:37vw;
