--- a/4.html
+++ b/4.html
@@ -72,7 +72,7 @@
   </p>
   <br><br><br><br><br>
   <p>
-    <img src="노랑배허리노린재.jpg" Width="100%">
+    <img src="북방풀노린재.JPG" Width="100%">
     <br><br><br>
     <span style="font-size:30px;">2019.10.9 강원 횡성 청태산 <strong>북방풀노린재</strong></span>
   </p>
