--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       font-weight:900;
       text-align: left;
       margin:0;
-      padding-top:6vw;
-      padding-left:7vw;
+      padding-top:8vw;
+      padding-left:9vw;
       padding-bottom:134vw;
       line-height:14vw;
       }
@@ -27,36 +27,15 @@
       padding: 0px;
       height: 96vh;
       width: 96vw;
-      background-image: url("제목 없음1234.png");
+      background-image: url("제목 없음12345.png");
       background-size: cover;
       background-repeat: no-repeat;
       }
     ul {
-      color:black;
       padding-left:37vw;
       list-style:none;
       margin:25px;
-      font-size:2vw;
-    }
-  </style>
-  <style type="text/css">
-    @font-face {
-    font-family: 'ChosunSm';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.1/ChosunSm.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    }
-    @font-face {
-    font-family: 'SUIT-Medium';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-    }
-    @font-face {
-    font-family: 'SUIT-Regular';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Regular.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
+      font-size:7vw;
     }
   </style>
 </head>
@@ -64,10 +43,10 @@
   <h1 style="color:white;"><a href="index.html">INSECTS<br>IN<br>KOREA</a></h1>
   <br><br><br><br>
   <ul>
-    <li><a href="1.html"><p style="font-family: 'SUIT-Medium';"><span style="font-size:100px;">나비목</span></p></a></li>
-    <li><a href="2.html"><p style="font-family: 'SUIT-Medium';"><span style="font-size:100px;">메뚜기목</span></p></a></li>
-    <li><a href="3.html"><p style="font-family: 'SUIT-Medium';"><span style="font-size:100px;">딱정벌레목</span></p></a></li>
-    <li><a href="4.html"><p style="font-family: 'SUIT-Medium';"><span style="font-size:100px;">노린재목</span></p></a></li>
+    <li><a href="1.html"><p style="font-family: 'Noto Sans KR', sans-serif;">나비목</p></a></li>
+    <li><a href="2.html"><p style="font-family: 'Noto Sans KR', sans-serif;">메뚜기목</p></a></li>
+    <li><a href="3.html"><p style="font-family: 'Noto Sans KR', sans-serif;">딱정벌레목</p></a></li>
+    <li><a href="4.html"><p style="font-family: 'Noto Sans KR', sans-serif;">노린재목</p></a></li>
   </ul>
 </body>
 </html>
