--- a/1.html
+++ b/1.html
@@ -9,32 +9,34 @@
       text-decoration: none;
     }
     h1 {
-      font-size:9vw;
-      border-bottom:3px solid white;
+      font-size:3vw;
+      font-weight: 400;
+      border-bottom:1px solid white;
       margin-bottom:0px;
       margin-left: 2vw;
       margin-right: 2vw;
-      padding-bottom:15px;
+      padding-bottom:1vw;
     }
     h2 {
       font-family: 'Noto Sans KR', sans-serif;
-      font-size:4vw;
+      font-size:2vw;
+      font-weight: 400;
     }
     p {
-      font-size:3vw;
+      font-size:1vw;
     }
     body {
       color: white;
       font-family: 'Noto Sans KR', sans-serif;
       margin:0;
-      background-color: black;
+      background-image: url("화면 캡처.jpg");
     }
   </style>
 </head>
 <body>
   <h1><a href="index.html">한국의 곤충</a></h1>
   <br><br><br>
-  <h2>나비목 (Lepidoptera)</h2>
+  <h2>&nbsp; 나비목 &#124 Lepidoptera</h2>
   <br><br><br>
   <p>
     <img src="청띠신선나비 (1).jpg" Width="100%">
@@ -97,6 +99,12 @@
     <img src="네발나비 (2).jpg" Width="100%">
     <br><br>
     &nbsp; 2021. 8. 28. 경기도 하남시 신장동 <strong>네발나비</strong>
+  </p>
+  <br><br><br>
+  <p>
+    <img src="큰멋쟁이나비.JPG" Width="100%">
+    <br><br>
+    &nbsp; 2022. 5. 5. 경기도 하남시 검단산 <strong>큰멋쟁이나비</strong>
   </p>
 </body>
 </html>
