--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       padding-left:37vw;
       list-style:none;
       margin:25px;
-      font-size:7vw;
+      font-size:5vw;
     }
   </style>
 </head>
@@ -43,10 +43,17 @@
   <h1 style="color:white;"><a href="index.html">INSECTS<br>IN<br>KOREA</a></h1>
   <br><br><br><br>
   <ul>
-    <li><a href="1.html"><p style="font-family: 'Noto Sans KR', sans-serif;">나비목</p></a></li>
-    <li><a href="2.html"><p style="font-family: 'Noto Sans KR', sans-serif;">메뚜기목</p></a></li>
-    <li><a href="3.html"><p style="font-family: 'Noto Sans KR', sans-serif;">딱정벌레목</p></a></li>
-    <li><a href="4.html"><p style="font-family: 'Noto Sans KR', sans-serif;">노린재목</p></a></li>
+    <li><a href="1.html">나비목</a></li>
+    <li><a href="2.html">메뚜기목</a></li>
+    <li><a href="3.html">딱정벌레목</a></li>
+    <li><a href="4.html">노린재목</a></li>
+    <li>잠자리목</li>
+    <li>하루살이목</li>
+    <li>사마귀목</li>
+    <li>파리목</li>
+    <li>집게벌레목</li>
+    <li>대벌레목</li>
+    <li>벌목</li>
   </ul>
 </body>
 </html>
