--- a/1.html
+++ b/1.html
@@ -34,38 +34,43 @@
   </style>
 </head>
 <body>
-  <h1><a href="index.html">한국의 곤충</a></h1>
-  <br><br><br>
+  <h1><a href="index.html">한국 곤충 사진첩</a></h1>
+  <br><br>
   <h2>&nbsp; 나비목 &#124 Lepidoptera</h2>
-  <br><br><br>
+  <br><br>
   <p>
     <img src="청띠신선나비 (1).jpg" Width="100%">
     <img src="청띠신선나비 (2).jpg" Width="100%">
     <br><br>
+    &nbsp; <i>Kaniska canace</i> (Linnaeus, 1763)<br>
     &nbsp; 2017. 4. 13. 서울시 강동구 일자산 <strong>청띠신선나비</strong>
   </p>
   <br><br><br>
   <p>
     <img src="흰무늬왕불나방.JPG" Width="100%">
     <br><br>
+    &nbsp; <i>Aglaomorpha histrio</i> (Walker, 1855)<br>
     &nbsp; 2017. 8. 15. 강원도 원주시 치악산 <strong>흰무늬왕불나방</strong>
   </p>
   <br><br><br>
   <p>
     <img src="암끝검은표범나비.JPG" Width="100%">
     <br><br>
+    &nbsp; <i>Argyreus hyperbius</i> (Linnaeus, 1763)<br>
     &nbsp; 2017. 10. 7. 경상남도 남해군 다랭이마을 <strong>암끝검은표범나비</strong>
   </p>
   <br><br><br>
   <p>
     <img src="줄점팔랑나비.JPG" Width="100%">
     <br><br>
+    &nbsp; <i>Parnara guttata</i> (Bremer et Grey, 1852)<br>
     &nbsp; 2017 .10. 7. 경상남도 남해군 다랭이마을 <strong>줄점팔랑나비</strong>
   </p>
   <br><br><br>
   <p>
     <img src="애기세줄나비.JPG" Width="100%">
     <br><br>
+    &nbsp; <i>Neptis sappho</i> (Pallas, 1771)<br>
     &nbsp; 2018. 8. 5. 경기도 안성시 칠현산 <strong>애기세줄나비</strong>
   </p>
   <br><br><br>
@@ -73,6 +78,7 @@
     <img src="왕물결나방(1).JPG" Width="100%">
     <img src="왕물결나방(2).JPG" Width="100%">
     <br><br>
+    &nbsp; <i>Brahmaea certhia</i> (Fabricius, 1793)<br>
     &nbsp; 2018. 8. 6. 경기도 안성시 칠현산 <strong>왕물결나방</strong><br>&nbsp; 2018. 8. 8.
   </p>
   <br><br><br>
@@ -85,12 +91,14 @@
   <p>
     <img src="산제비나비.JPG" Width="100%">
     <br><br>
+    &nbsp; <i>Papilio maackii</i> Ménétriès, 1858<br>
     &nbsp; 2019. 6. 6. 경기도 남양주시 수동면 <strong>산제비나비</strong>
   </p>
   <br><br><br>
   <p>
     <img src="왕세줄나비.JPG" Width="100%">
     <br><br>
+    &nbsp; <i>Neptis alwina</i> (Bremer et Grey, 1852)<br>
     &nbsp; 2019. 6. 6. 경기도 남양주시 수동면 <strong>왕세줄나비</strong>
   </p>
   <br><br><br>
@@ -98,13 +106,16 @@
     <img src="네발나비 (1).jpg" Width="100%">
     <img src="네발나비 (2).jpg" Width="100%">
     <br><br>
+    &nbsp; <i>Polygonia c-aureum</i> (Linnaeus, 1758)<br>
     &nbsp; 2021. 8. 28. 경기도 하남시 신장동 <strong>네발나비</strong>
   </p>
   <br><br><br>
   <p>
     <img src="큰멋쟁이나비.JPG" Width="100%">
     <br><br>
+    &nbsp; <i>Vanessa indica</i> (Herbst, 1794)<br>
     &nbsp; 2022. 5. 5. 경기도 하남시 검단산 <strong>큰멋쟁이나비</strong>
   </p>
+  <br><br><br><br><br>
 </body>
 </html>
