--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 <head>
   <title>Insects of South Korea</title>
   <meta charset="utf-8">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
   <style>
-    a {
+   @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&display=swap');
+   a {
       color:white;
       text-decoration: none;
-    }
+      }
     h1 {
-      font-family: 'Noto Sans KR', sans-serif;
       font-size:14vw;
       font-weight:900;
       text-align: left;
@@ -23,6 +20,7 @@
       line-height:14vw;
       }
     body {
+      font-family: 'Noto Sans KR', sans-serif;
       margin: 0px;
       padding: 0px;
       height: 96vh;
@@ -32,7 +30,7 @@
       background-repeat: no-repeat;
       }
     ul {
-      padding-left:37vw;
+      padding-left:20vw;
       list-style:none;
       margin:25px;
       font-size:5vw;
@@ -44,6 +42,7 @@
   <br><br><br><br>
   <ul>
     <li><a href="1.html">나비목</a></li>
+    <li>벌목</li>
     <li><a href="2.html">메뚜기목</a></li>
     <li><a href="3.html">딱정벌레목</a></li>
     <li><a href="4.html">노린재목</a></li>
@@ -53,7 +52,6 @@
     <li>파리목</li>
     <li>집게벌레목</li>
     <li>대벌레목</li>
-    <li>벌목</li>
   </ul>
 </body>
 </html>
