--- a/1.html
+++ b/1.html
@@ -39,6 +39,20 @@
   <h2>&nbsp; 나비목 &#124 Lepidoptera</h2>
   <br><br>
   <p>
+    <img src="굵은줄제비가지나방.jpg" Width="100%">
+    <br><br>
+    &nbsp; <i>Ourapteryx koreana</i> (Inoue, 1993)<br>
+    &nbsp; 2015. 9. 30. 충청남도 서산시 용현계곡 <strong>굵은줄제비가지나방</strong>
+  </p>
+  <br><br><br>
+  <p>
+    <img src="숫검은밤나방.jpg" Width="100%">
+    <br><br>
+    &nbsp; <i>Agrotis tokionis</i> (Butler, 1881)<br>
+    &nbsp; 2016. 10. 3. 경기도 용인시 처인구 남사면 <strong>숫검은밤나방</strong>
+  </p>
+  <br><br><br>
+  <p>
     <img src="청띠신선나비 (1).jpg" Width="100%">
     <img src="청띠신선나비 (2).jpg" Width="100%">
     <br><br>
@@ -55,9 +69,11 @@
   <br><br><br>
   <p>
     <img src="암끝검은표범나비.JPG" Width="100%">
+    <img src="암끝검은표범나비 (2).jpg" Width="100%">
     <br><br>
     &nbsp; <i>Argyreus hyperbius</i> (Linnaeus, 1763)<br>
-    &nbsp; 2017. 10. 7. 경상남도 남해군 다랭이마을 <strong>암끝검은표범나비</strong>
+    &nbsp; 2017. 10. 7. 경상남도 남해군 다랭이마을 <strong>암끝검은표범나비</strong><br>
+    &nbsp; 2022. 8. 14. 경기도 하남시 미사호수공원
   </p>
   <br><br><br>
   <p>
@@ -83,12 +99,6 @@
   </p>
   <br><br><br>
   <p>
-    <img src="산누에나방 종류.JPG" Width="100%">
-    <br><br>
-    &nbsp; 2018. 9. 12. 강원도 태백시 태백산 <strong>산누에나방 종류 (미동정)</strong>
-  </p>
-  <br><br><br>
-  <p>
     <img src="산제비나비.JPG" Width="100%">
     <br><br>
     &nbsp; <i>Papilio maackii</i> Ménétriès, 1858<br>
@@ -103,8 +113,14 @@
   </p>
   <br><br><br>
   <p>
+    <img src="황알락그늘나비.jpg" Width="100%">
+    <br><br>
+    &nbsp; <i>Kirinia epaminondas</i> (Staudinger, 1887)<br>
+    &nbsp; 2020. 8. 17. 경기도 하남시 검단산 <strong>황알락그늘나비</strong>
+  </p>
+  <br><br><br>
+  <p>
     <img src="네발나비 (1).jpg" Width="100%">
-    <img src="네발나비 (2).jpg" Width="100%">
     <br><br>
     &nbsp; <i>Polygonia c-aureum</i> (Linnaeus, 1758)<br>
     &nbsp; 2021. 8. 28. 경기도 하남시 신장동 <strong>네발나비</strong>
@@ -116,6 +132,34 @@
     &nbsp; <i>Vanessa indica</i> (Herbst, 1794)<br>
     &nbsp; 2022. 5. 5. 경기도 하남시 검단산 <strong>큰멋쟁이나비</strong>
   </p>
-  <br><br><br><br><br>
+  <br><br><br>
+  <p>
+    <img src="점줄재주나방.jpg" Width="100%">
+    <br><br>
+    &nbsp; <i>Drymonia dodonides</i> (Staudinger, 1887)<br>
+    &nbsp; 2022. 5. 5. 경기도 하남시 검단산 <strong>점줄재주나방</strong>
+  </p>
+  <br><br><br>
+  <p>
+    <img src="긴꼬리산누에나방.jpg" Width="100%">
+    <br><br>
+    &nbsp; <i>Actias artemis</i> (Bremer and grey, 1853)<br>
+    &nbsp; 2022. 7. 1. 전라북도 임실군 관촌면 <strong>긴꼬리산누에나방</strong>
+  </p>
+  <br><br><br>
+  <p>
+    <img src="작은주홍부전나비.jpg" Width="100%">
+    <br><br>
+    &nbsp; <i>Lycaena phlaeas</i> (Linnaeus, 1761)<br>
+    &nbsp; 2022. 7. 2. 전라북도 임실군 관촌면 <strong>작은주홍부전나비</strong>
+  </p>
+  <br><br><br>
+  <p>
+    <img src="배추흰나비.jpg" Width="100%">
+    <br><br>
+    &nbsp; <i>Pieris rapae</i> (Linnaeus, 1758)<br>
+    &nbsp; 2022. 7. 2. 전라북도 임실군 관촌면 <strong>배추흰나비</strong>
+  </p>
+  <br><br><br>
 </body>
 </html>
