--- a/2.html
+++ b/2.html
@@ -1,101 +1,49 @@
 <!doctype html>
 <html>
 <head>
-  <title>Field Guide to Insects of South Korea - Orthoptera</title>
+  <title>Field Guide to Insects of South Korea - Hymenoptera</title>
   <meta charset="utf-8">
   <style>
     a {
-      color:black;
-    }
-    a {
+      color: white;
       text-decoration: none;
     }
     h1 {
-      font-size:90px;
-      border-bottom:3px solid black;
+      font-size:3vw;
+      font-weight: 400;
+      border-bottom:1px solid white;
       margin-bottom:0px;
-      padding-bottom:15px;
+      margin-left: 2vw;
+      margin-right: 2vw;
+      padding-bottom:1vw;
+    }
+    h2 {
+      font-family: 'Noto Sans KR', sans-serif;
+      font-size:2vw;
+      font-weight: 400;
+    }
+    p {
+      font-size:1vw;
     }
     body {
-      margin:60px;
-      font-family: 'ChosunSm';
-    }
-  </style>
-  <style type="text/css">
-    @font-face {
-    font-family: 'ChosunSm';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.1/ChosunSm.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    }
-    @font-face {
-    font-family: 'SUIT-Medium';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
+      color: white;
+      font-family: 'Noto Sans KR', sans-serif;
+      margin:0;
+      background-image: url("화면 캡처.jpg");
     }
   </style>
 </head>
 <body>
-  <h1><a href="index.html">한국의 곤충</a></h1>
-  <br><br><br><br><br>
-  <h2><span style="font-size:50px;">메뚜기목(Orthoptera)</span></h2>
-  <br><br><br><br><br>
+  <h1><a href="index.html">한국 곤충 사진첩</a></h1>
+  <br><br>
+  <h2>&nbsp; 벌목 &#124 Hymenoptera</h2>
+  <br><br>
   <p>
-    <img src="여치.jpg" Width="100%">
-    <br><br><br>
-    <span style="font-size:30px;">2016.8.15 충남 서산 <strong>여치</strong></span>
-  </p>
-  <br><br><br><br><br>
-  <p>
-    <img src="벼메뚜기.JPG" Width="100%">
-    <br><br><br>
-    <span style="font-size:30px;">2019.10.7 강원 횡성 청태산 <strong>벼메뚜기</strong></span>
-  </p>
-  <br><br><br><br><br>
-  <p>
-    <img src="밑들이메뚜기.JPG" Width="100%">
-    <br><br><br>
-    <span style="font-size:30px;">2019.10.7 강원 횡성 청태산 <strong>밑들이메뚜기</strong></span>
-  </p>
-  <br><br><br><br><br>
-  <p>
-    <img src="애매부리.JPG" Width="100%">
-    <br><br><br>
-    <span style="font-size:30px;">2019.10.7 강원 횡성 청태산 <strong>애매부리</strong></span>
-  </p>
-  <br><br><br><br><br>
-  <p>
-    <img src="모메뚜기 (1).jpg" Width="100%">
-    <img src="모메뚜기 (2).jpg" Width="100%">
-    <br><br><br>
-    <span style="font-size:30px;">2020.7.25 경기 하남 미사 <strong>모메뚜기</strong></span>
+    <img src="곰개미.JPG" Width="100%">
     <br><br>
-    <span style="font-size:30px;">2021.8.28</span>
+    &nbsp; <i>Ourapteryx koreana</i> (Inoue, 1993)<br>
+    &nbsp; 2019. 8. 5. 경기도 하남시 미사경정공원 <strong>곰개미</strong>
   </p>
-  <br><br><br><br><br>
-  <p>
-    <img src="방아깨비.jpg" Width="100%">
-    <br><br><br>
-    <span style="font-size:30px;">2021.8.7 경기 하남 미사 <strong>방아깨비</strong></span>
-  </p>
-  <br><br><br><br><br>
-  <p>
-    <img src="섬서구메뚜기.jpg" Width="100%">
-    <br><br><br>
-    <span style="font-size:30px;">2021.8.28 경기 하남 미사 <strong>섬서구메뚜기</strong></span>
-  </p>
-  <br><br><br><br><br>
-  <p>
-    <img src="줄베짱이.jpg" Width="100%">
-    <br><br><br>
-    <span style="font-size:30px;">2021.9.19 충남 서산 가재골 <strong>줄베짱이</strong></span>
-  </p>
-  <br><br><br><br><br>
-  <p>
-    <img src="날베짱이.JPG" Width="100%">
-    <br><br><br>
-    <span style="font-size:30px;">2021.10.11 경기 가평 용소계곡 <strong>날베짱이</strong></span>
-  </p>
-</body>
+  <br><br><br>
+  </body>
 </html>
