--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       padding: 0px;
       height: 96vh;
       width: 96vw;
-      background-image: url("제목 없음12345.png");
+      background-image: url("제목 없음.png");
       background-size: cover;
       background-repeat: no-repeat;
       }
@@ -39,13 +39,13 @@
 </head>
 <body>
   <h1 style="color:white;"><a href="index.html">INSECTS<br>IN<br>KOREA</a></h1>
-  <br><br><br><br>
+  <br>
   <ul>
     <li><a href="1.html">나비목</a></li>
-    <li>벌목</li>
-    <li><a href="2.html">메뚜기목</a></li>
-    <li><a href="3.html">딱정벌레목</a></li>
-    <li><a href="4.html">노린재목</a></li>
+    <li><a href="2.html">벌목</a></li>
+    <li><a href="3.html">메뚜기목</a></li>
+    <li><a href="4.html">딱정벌레목</a></li>
+    <li><a href="5.html">노린재목</a></li>
     <li>잠자리목</li>
     <li>하루살이목</li>
     <li>사마귀목</li>
