--- a/index.html
+++ b/index.html
@@ -53,5 +53,7 @@
     <li>집게벌레목</li>
     <li>대벌레목</li>
   </ul>
+  <br><br><br><br>
+  <font color="white">&copy; 2023. Lee Jaebin. All right reserved.</font>
 </body>
 </html>
