--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Insects of South Korea</title>
+  <title>Insects Observation Book</title>
   <meta charset="utf-8">
   <style>
    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&display=swap');
@@ -33,7 +33,7 @@
       padding-left:20vw;
       list-style:none;
       margin:25px;
-      font-size:5vw;
+      font-size:4vw;
     }
   </style>
 </head>
