--- a/4.html
+++ b/4.html
@@ -1,42 +1,63 @@
 <!doctype html>
 <html>
 <head>
-  <title>Field Guide to Insects of South Korea - Coleoptera</title>
+  <title>Insects Observation Book -Coleoptera</title>
   <meta charset="utf-8">
   <style>
     a {
-      color:black;
-    }
-    a {
+      color: white;
       text-decoration: none;
     }
     h1 {
-      font-size:90px;
-      border-bottom:3px solid black;
+      font-size:3vw;
+      font-weight: 400;
+      border-bottom:1px solid white;
       margin-bottom:0px;
-      padding-bottom:15px;
+      margin-left: 2vw;
+      margin-right: 2vw;
+      padding-bottom:1vw;
+    }
+    h2 {
+      font-family: 'Noto Sans KR', sans-serif;
+      font-size:2vw;
+      font-weight: 400;
+    }
+    p {
+      font-size:1vw;
     }
     body {
-      margin:60px;
-      font-family: 'ChosunSm';
+      color: white;
+      font-family: 'Noto Sans KR', sans-serif;
+      margin:0;
+      background-color: black;
     }
- </style>
- <style type="text/css">
-   @font-face {
-   font-family: 'ChosunSm';
-   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.1/ChosunSm.woff') format('woff');
-   font-weight: normal;
-   font-style: normal;
-   }
-   @font-face {
-    font-family: 'SUIT-Medium';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-   }
- </style>
+  </style>
 </head>
 <body>
-  <h1><a href="index.html">한국의 곤충</a></h1>
+  <h1><a href="index.html">Insects Observation Book</a></h1>
+  <br><br>
+  <h2>&nbsp; 딱정벌레목 &#124 Lepidoptera</h2>
+  <br><br>
+  <p>
+    <img src="남생이무당벌레.jpg" Width="100%">
+    <br>
+    &nbsp; <i>Aiolocaria hexaspilota</i> (Hope, 1831)<br>
+    &nbsp; 2021. 11. 21. 경기도 하남시 망월동 <strong>남생이무당벌레</strong>
+  </p>
+  <br><br><br><br><br><br>
+  <p>
+    <img src="털두꺼비하늘소.JPG" Width="100%">
+    <br>
+    &nbsp; <i>Moechotypa diphysis</i> (Pascoe, 1871)<br>
+    &nbsp; 2022. 5. 5. 경기도 남양주시 예봉산<strong>털두꺼비하늘소</strong>
+  </p>
+  <br><br><br><br><br><br>
+  <p>
+    <img src="털두꺼비하늘소.JPG" Width="100%">
+    <br>
+    &nbsp; <i>Moechotypa diphysis</i> (Pascoe, 1871)<br>
+    &nbsp; 2022. 5. 5. 경기도 남양주시 예봉산<strong>털두꺼비하늘소</strong>
+  </p>
+  <br><br><br><br><br><br>
 </body>
 </html>
