--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     <li><a href="3.html">메뚜기목</a></li>
     <li><a href="4.html">딱정벌레목</a></li>
     <li><a href="5.html">노린재목</a></li>
-    <li>잠자리목</li>
-    <li>하루살이목</li>
-    <li>사마귀목</li>
-    <li>파리목</li>
-    <li>집게벌레목</li>
-    <li>대벌레목</li>
+    <li><a href="1.html">잠자리목</a></li>
+    <li><a href="1.html">하루살이목</a></li>
+    <li><a href="1.html">사마귀목</a></li>
+    <li><a href="1.html">파리목</a></li>
+    <li><a href="1.html">집게벌레목</a></li>
+    <li><a href="1.html">대벌레목</a></li>
   </ul>
   <br><br><br><br>
-  <font color="white">&copy; 2023. Lee Jaebin. All right reserved.</font>
+  <font color="white"><font size="1vW">&copy; 2023. Lee Jaebin. All right reserved.</font></font>
 </body>
 </html>
